optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_multi_capture.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const Foo = component$(({foo}) => {
	const arg0 = 20;
	return $(() => {
		const fn = ({aaa}) => aaa;
		return (
			<div>
				{foo}{fn()}{arg0}
			</div>
		)
	});
})

export const Bar = component$(({bar}) => {
	return $(() => {
		return (
			<div>
				{bar}
			</div>
		)
	});
})

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Foo_component_HTDRsvUbLiE = (_rawProps)=>{
	const arg0 = 20;
	return /*#__PURE__*/ qrl(i_DvU6FitWglY, "Foo_component_1_DvU6FitWglY", [arg0]);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    219
  ]
}
*/
============================= test.tsx_Bar_component_L80pS8Hxf1Y.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Bar_component_L80pS8Hxf1Y = (_rawProps)=>{
	return /*#__PURE__*/ qrl(i_0xSyNSnVu3k, "Bar_component_1_0xSyNSnVu3k");
};


None
/*
{
  "origin": "test.tsx",
  "name": "Bar_component_L80pS8Hxf1Y",
  "entry": null,
  "displayName": "test.tsx_Bar_component",
  "hash": "L80pS8Hxf1Y",
  "canonicalFilename": "test.tsx_Bar_component_L80pS8Hxf1Y",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    252,
    333
  ]
}
*/
============================= test.tsx_Foo_component_1_DvU6FitWglY.tsx (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Foo_component_1_DvU6FitWglY = ()=>{
	const [arg0] = useLexicalScope();
	const fn = ({ aaa })=>aaa;
	return <div>
				{foo}{fn()}{arg0}
			</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "test.tsx_Foo_component_1_DvU6FitWglY",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    120,
    215
  ]
}
*/
============================= test.tsx_Bar_component_1_0xSyNSnVu3k.tsx (ENTRY POINT)==

export const Bar_component_1_0xSyNSnVu3k = ()=>{
	return <div>
				{bar}
			</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Bar_component_1_0xSyNSnVu3k",
  "entry": null,
  "displayName": "test.tsx_Bar_component_1",
  "hash": "0xSyNSnVu3k",
  "canonicalFilename": "test.tsx_Bar_component_1_0xSyNSnVu3k",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    275,
    329
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_DvU6FitWglY = ()=>import("./test.tsx_Foo_component_1_DvU6FitWglY");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
const i_0xSyNSnVu3k = ()=>import("./test.tsx_Bar_component_1_0xSyNSnVu3k");
const i_L80pS8Hxf1Y = ()=>import("./test.tsx_Bar_component_L80pS8Hxf1Y");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));
export const Bar = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_L80pS8Hxf1Y, "Bar_component_L80pS8Hxf1Y"));


None
== DIAGNOSTICS ==

[]
