optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_mutable_children.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, Slot, Fragment } from '@qwik.dev/core';
import Image from './image.jpg?jsx';

export function Fn1(props: Stuff) {
	return (
		<>
			<div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>
		</>
	);
}

export function Fn2(props: Stuff) {
	return (
		<div>{prop.value && <Stuff></Stuff>}<div></div></div>
	);
}

export function Fn3(props: Stuff) {
	if (prop.value) {
		return (
			<Stuff></Stuff>
		);
	}
	return (
		<div></div>
	);
}

export function Fn4(props: Stuff) {
	if (prop.value) {
		return (
			<div></div>
		);
	}
	return (
		<Stuff></Stuff>
	);
}

export const Arrow = (props: Stuff) => <div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>;

export const AppDynamic1 = component$((props: Stuff) => {
	return (
		<>
			<div>{prop < 2 ? <p>1</p> : <Stuff>2</Stuff>}</div>
		</>
	);
});
export const AppDynamic2 = component$((props: Stuff) => {
	return (
		<div>{prop.value && <Stuff></Stuff>}<div></div></div>
	);
});

export const AppDynamic3 = component$((props: Stuff) => {
	if (prop.value) {
		return (
			<Stuff></Stuff>
		);
	}
	return (
		<div></div>
	);
});

export const AppDynamic4 = component$((props: Stuff) => {
	if (prop.value) {
		return (
			<div></div>
		);
	}
	return (
		<Stuff></Stuff>
	);
});

export const AppStatic = component$((props: Stuff) => {
	return (
		<>
			<div>Static {f ? 1 : 3}</div>
			<div>{prop < 2 ? <p>1</p> : <p>2</p>}</div>

			<div>{prop.value && <div></div>}</div>
			<div>{prop.value && <Fragment><Slot></Slot></Fragment>}</div>
			<div>{prop.value && <><div></div></>}</div>
			<div>{prop.value && <Image/>}</div>
			<div>Static {f ? 1 : 3}</div>
			<div>Static</div>
			<div>Static {props.value}</div>
			<div>Static {stuff()}</div>
			<div>Static {stuff()}</div>
		</>
	);
});

============================= test.js ==

import { _jsxSorted, componentQrl, qrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_R00UJ05gbes = ()=>import("./test.tsx_AppDynamic1_component_R00UJ05gbes");
const i_3EY2zm0v00A = ()=>import("./test.tsx_AppDynamic2_component_3EY2zm0v00A");
const i_FVq83NlbTDQ = ()=>import("./test.tsx_AppDynamic3_component_FVq83NlbTDQ");
const i_IO0yr8UvWEI = ()=>import("./test.tsx_AppDynamic4_component_IO0yr8UvWEI");
const i_gYRXqF3G5nE = ()=>import("./test.tsx_AppStatic_component_gYRXqF3G5nE");
export function Fn1(props) {
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : _jsxSorted(Stuff, null, null, "2", 3, null), 1, null), 3, null);
}
export function Fn2(props) {
	return /*#__PURE__*/ _jsxSorted("div", null, null, [prop.value && _jsxSorted(Stuff, null, null, null, 3, null), /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null)], 1, null);
}
export function Fn3(props) {
	if (prop.value) {
		return _jsxSorted(Stuff, null, null, null, 3, null);
	}
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
}
export function Fn4(props) {
	if (prop.value) {
		return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
	}
	return _jsxSorted(Stuff, null, null, null, 3, null);
}
export const Arrow = (props)=>/*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : _jsxSorted(Stuff, null, null, "2", 3, null), 1, null);
export const AppDynamic1 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_R00UJ05gbes, "AppDynamic1_component_R00UJ05gbes"));
export const AppDynamic2 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_3EY2zm0v00A, "AppDynamic2_component_3EY2zm0v00A"));
export const AppDynamic3 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_FVq83NlbTDQ, "AppDynamic3_component_FVq83NlbTDQ"));
export const AppDynamic4 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_IO0yr8UvWEI, "AppDynamic4_component_IO0yr8UvWEI"));
export const AppStatic = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_gYRXqF3G5nE, "AppStatic_component_gYRXqF3G5nE"));


None
============================= test.tsx_AppDynamic3_component_FVq83NlbTDQ.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const AppDynamic3_component_FVq83NlbTDQ = (props)=>{
	if (prop.value) {
		return _jsxSorted(Stuff, null, null, null, 3, null);
	}
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "AppDynamic3_component_FVq83NlbTDQ",
  "entry": "entry_segments",
  "displayName": "test.tsx_AppDynamic3_component",
  "hash": "FVq83NlbTDQ",
  "canonicalFilename": "test.tsx_AppDynamic3_component_FVq83NlbTDQ",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    991,
    1097
  ]
}
*/
============================= test.tsx_AppDynamic4_component_IO0yr8UvWEI.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const AppDynamic4_component_IO0yr8UvWEI = (props)=>{
	if (prop.value) {
		return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
	}
	return _jsxSorted(Stuff, null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "AppDynamic4_component_IO0yr8UvWEI",
  "entry": "entry_segments",
  "displayName": "test.tsx_AppDynamic4_component",
  "hash": "IO0yr8UvWEI",
  "canonicalFilename": "test.tsx_AppDynamic4_component_IO0yr8UvWEI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    1139,
    1245
  ]
}
*/
============================= test.tsx_AppStatic_component_gYRXqF3G5nE.js (ENTRY POINT)==

import Image from "./image.jpg?jsx";
import { Fragment, Slot, _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const AppStatic_component_gYRXqF3G5nE = (props)=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", f ? 1 : 3], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : /*#__PURE__*/ _jsxSorted("p", null, null, "2", 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && _jsxSorted(Fragment, null, null, _jsxSorted(Slot, null, null, null, 3, null), 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null), 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, prop.value && _jsxSorted(Image, null, null, null, 3, null), 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", f ? 1 : 3], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, "Static", 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", _wrapProp(props)], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", stuff()], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["Static", stuff()], 1, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "AppStatic_component_gYRXqF3G5nE",
  "entry": "entry_segments",
  "displayName": "test.tsx_AppStatic_component",
  "hash": "gYRXqF3G5nE",
  "canonicalFilename": "test.tsx_AppStatic_component_gYRXqF3G5nE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    1285,
    1756
  ]
}
*/
============================= test.tsx_AppDynamic1_component_R00UJ05gbes.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const AppDynamic1_component_R00UJ05gbes = (props)=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("div", null, null, prop < 2 ? /*#__PURE__*/ _jsxSorted("p", null, null, "1", 3, null) : _jsxSorted(Stuff, null, null, "2", 3, null), 1, null), 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "AppDynamic1_component_R00UJ05gbes",
  "entry": "entry_segments",
  "displayName": "test.tsx_AppDynamic1_component",
  "hash": "R00UJ05gbes",
  "canonicalFilename": "test.tsx_AppDynamic1_component_R00UJ05gbes",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    716,
    817
  ]
}
*/
============================= test.tsx_AppDynamic2_component_3EY2zm0v00A.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const AppDynamic2_component_3EY2zm0v00A = (props)=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, [prop.value && _jsxSorted(Stuff, null, null, null, 3, null), /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null)], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "AppDynamic2_component_3EY2zm0v00A",
  "entry": "entry_segments",
  "displayName": "test.tsx_AppDynamic2_component",
  "hash": "3EY2zm0v00A",
  "canonicalFilename": "test.tsx_AppDynamic2_component_3EY2zm0v00A",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    858,
    949
  ]
}
*/
== DIAGNOSTICS ==

[]
