optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_noop_dev_mode.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, serverStuff$, $ } from '@qwik.dev/core';

export const App = component$(() => {
	const stuff = useStore();
	serverStuff$(async () => {
		// should be removed but keep scope
		console.log(stuff.count)
	})
	serverStuff$(async () => {
		// should be removed
	})

	return (
		<Cmp>
			<p class="stuff"
				shouldRemove$={() => stuff.count}
				onClick$={() => console.log('warn')}
			>
				Hello Qwik
			</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ebyHaP15ytQ = ()=>import("./test.tsx_App_component_serverStuff_ebyHaP15ytQ");
const i_PQCqO0ANabY = ()=>import("./test.tsx_App_component_serverStuff_1_PQCqO0ANabY");
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
============================= test.tsx_App_component_serverStuff_1_PQCqO0ANabY.js (ENTRY POINT)==

export const App_component_serverStuff_1_PQCqO0ANabY = async ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_serverStuff_1_PQCqO0ANabY",
  "entry": null,
  "displayName": "test.tsx_App_component_serverStuff_1",
  "hash": "PQCqO0ANabY",
  "canonicalFilename": "test.tsx_App_component_serverStuff_1_PQCqO0ANabY",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "serverStuff$",
  "captures": false,
  "loc": [
    249,
    288
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
const i_ebyHaP15ytQ = ()=>import("./test.tsx_App_component_serverStuff_ebyHaP15ytQ");
const i_PQCqO0ANabY = ()=>import("./test.tsx_App_component_serverStuff_1_PQCqO0ANabY");
export const App_component_ckEPmXZlub0 = ()=>{
	const stuff = useStore();
	/*#__PURE__*/ serverStuffQrl(/*#__PURE__*/ qrl(i_ebyHaP15ytQ, "App_component_serverStuff_ebyHaP15ytQ", [stuff]));
	/*#__PURE__*/ serverStuffQrl(/*#__PURE__*/ qrl(i_PQCqO0ANabY, "App_component_serverStuff_1_PQCqO0ANabY"));
	return _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", {
		shouldRemove$: /*#__PURE__*/ serverStuffQrl(/*#__PURE__*/ qrl(i_PQCqO0ANabY, "App_component_serverStuff_1_PQCqO0ANabY")),
		"on:click": /*#__PURE__*/ serverStuffQrl(/*#__PURE__*/ qrl(i_ebyHaP15ytQ, "App_component_serverStuff_ebyHaP15ytQ", [stuff]))
	}, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    103,
    450
  ]
}
*/
============================= test.tsx_App_component_serverStuff_ebyHaP15ytQ.js (ENTRY POINT)==

export const App_component_serverStuff_ebyHaP15ytQ = async ()=>{
	const [stuff] = useLexicalScope();
	console.log(stuff.count);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_serverStuff_ebyHaP15ytQ",
  "entry": null,
  "displayName": "test.tsx_App_component_serverStuff",
  "hash": "ebyHaP15ytQ",
  "canonicalFilename": "test.tsx_App_component_serverStuff_ebyHaP15ytQ",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "serverStuff$",
  "captures": true,
  "loc": [
    152,
    233
  ]
}
*/
== DIAGNOSTICS ==

[]
