optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_of_synchronous_qrl.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { sync$, component$ } from "@qwik.dev/core";

export default component$(() => {
return (
	<>
		<input onClick$={sync$(function(event, target) {
			// comment should be removed
			event.preventDefault();
		})}/>
		<input onClick$={sync$((event, target) => {
			event.preventDefault();
		})}/>
		<input onClick$={sync$((event, target) => event.preventDefault())}/>
	</>
);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_PsTDLPuwd80 = ()=>import("./test.tsx_component_input_onClick_sync_PsTDLPuwd80");
const i_jP6KLJtJY7Y = ()=>import("./test.tsx_component_input_onClick_1_sync_jP6KLJtJY7Y");
const i_70NBUDZ5QJc = ()=>import("./test.tsx_component_input_onClick_2_sync_70NBUDZ5QJc");
const i_G7jVUwdBFEM = ()=>import("./test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));


None
============================= test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, qrl, syncQrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_70NBUDZ5QJc = ()=>import("./test.tsx_component_input_onClick_2_sync_70NBUDZ5QJc");
const i_jP6KLJtJY7Y = ()=>import("./test.tsx_component_input_onClick_1_sync_jP6KLJtJY7Y");
const i_PsTDLPuwd80 = ()=>import("./test.tsx_component_input_onClick_sync_PsTDLPuwd80");
export const component_G7jVUwdBFEM = ()=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("input", { on:click: /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_PsTDLPuwd80, "component_input_onClick_sync_PsTDLPuwd80")) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", { on:click: /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_jP6KLJtJY7Y, "component_input_onClick_1_sync_jP6KLJtJY7Y")) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", { on:click: /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_70NBUDZ5QJc, "component_input_onClick_2_sync_70NBUDZ5QJc")) }, null, null, 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    379
  ]
}
*/
============================= test.tsx_component_input_onClick_2_sync_70NBUDZ5QJc.js (ENTRY POINT)==

export const component_input_onClick_2_sync_70NBUDZ5QJc = (event, target)=>event.preventDefault();


None
/*
{
  "origin": "test.tsx",
  "name": "component_input_onClick_2_sync_70NBUDZ5QJc",
  "entry": null,
  "displayName": "test.tsx_component_input_onClick_2_sync",
  "hash": "70NBUDZ5QJc",
  "canonicalFilename": "test.tsx_component_input_onClick_2_sync_70NBUDZ5QJc",
  "path": "",
  "extension": "js",
  "parent": "onClick_2",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    324,
    365
  ]
}
*/
============================= test.tsx_component_input_onClick_1_sync_jP6KLJtJY7Y.js (ENTRY POINT)==

export const component_input_onClick_1_sync_jP6KLJtJY7Y = (event, target)=>{
	event.preventDefault();
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_input_onClick_1_sync_jP6KLJtJY7Y",
  "entry": null,
  "displayName": "test.tsx_component_input_onClick_1_sync",
  "hash": "jP6KLJtJY7Y",
  "canonicalFilename": "test.tsx_component_input_onClick_1_sync_jP6KLJtJY7Y",
  "path": "",
  "extension": "js",
  "parent": "onClick_1",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    243,
    294
  ]
}
*/
============================= test.tsx_component_input_onClick_sync_PsTDLPuwd80.js (ENTRY POINT)==

export const component_input_onClick_sync_PsTDLPuwd80 = function(event, target) {
	event.preventDefault();
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_input_onClick_sync_PsTDLPuwd80",
  "entry": null,
  "displayName": "test.tsx_component_input_onClick_sync",
  "hash": "PsTDLPuwd80",
  "canonicalFilename": "test.tsx_component_input_onClick_sync_PsTDLPuwd80",
  "path": "",
  "extension": "js",
  "parent": "onClick",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    125,
    213
  ]
}
*/
== DIAGNOSTICS ==

[]
