optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_optimization_issue_3542.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const AtomStatus = component$(({ctx,atom})=>{
	let status = atom.status;
	if(!atom.real) {
		status="WILL-VANISH"
	} else if (JSON.stringify(atom.atom)==JSON.stringify(atom.real)) {
		status="WTFED"
	}
	return (
		<span title={atom.ID} onClick$={(ev)=>atomStatusClick(ctx,ev,[atom])} class={["atom",status,ctx.store[atom.ID]?"selected":null]}>
		</span>
	);
})

============================= test.tsx ==

import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
export const AtomStatus = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(({ ctx, atom })=>{
	let status = atom.status;
	if (!atom.real) {
		status = "WILL-VANISH";
	} else if (JSON.stringify(atom.atom) == JSON.stringify(atom.real)) {
		status = "WTFED";
	}
	return <span title={atom.ID} on:click={/*#__PURE__*/ inlinedQrl((ev)=>atomStatusClick(ctx, ev, [atom]), "AtomStatus_component_span_onClick_Owf5fKaOlF0")} class={[
		"atom",
		status,
		ctx.store[atom.ID] ? "selected" : null
	]}>
		</span>;
}, "AtomStatus_component_hdwpoUtydSA"));


None
== DIAGNOSTICS ==

[]
