optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_optimization_issue_3561.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const Issue3561 = component$(() => {
	const props = useStore({
		product: {
		currentVariant: {
			variantImage: 'image',
			variantNumber: 'number',
			setContents: 'contents',
		},
		},
	});
	const {
		currentVariant: { variantImage, variantNumber, setContents } = {},
	} = props.product;

	console.log(variantImage, variantNumber, setContents)

	return <p></p>;
	});

============================= test.tsx ==

import { componentQrl, inlinedQrl } from "@qwik.dev/core";
export const Issue3561 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
	const props = useStore({ product: { currentVariant: {
		variantImage: "image",
		variantNumber: "number",
		setContents: "contents"
	} } });
	const { currentVariant: { variantImage, variantNumber, setContents } = {} } = props.product;
	console.log(variantImage, variantNumber, setContents);
	return <p></p>;
}, "Issue3561_component_hHTw654BZB8"));


None
== DIAGNOSTICS ==

[]
