optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_optimization_issue_3795.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const Issue3795 = component$(() => {
	let base = "foo";
	const firstAssignment = base;
	base += "bar";
	const secondAssignment = base;
	return (
		<div id='issue-3795-result'>{firstAssignment} {secondAssignment}</div>
	)
	});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_tnEyhvrQNks = ()=>import("./test.tsx_test.tsx_Issue3795_component_tnEyhvrQNks");
export const Issue3795 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_tnEyhvrQNks, "test.tsx_Issue3795_component_tnEyhvrQNks"));


None
============================= test.tsx_test.tsx_Issue3795_component_tnEyhvrQNks.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const test.tsx_Issue3795_component_tnEyhvrQNks = ()=>{
	let base = "foo";
	const firstAssignment = base;
	base += "bar";
	const secondAssignment = base;
	return /*#__PURE__*/ _jsxSorted("div", null, { id: "issue-3795-result" }, [firstAssignment, secondAssignment], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Issue3795_component_tnEyhvrQNks",
  "entry": "entry_segments",
  "displayName": "test.tsx_Issue3795_component",
  "hash": "tnEyhvrQNks",
  "canonicalFilename": "test.tsx_test.tsx_Issue3795_component_tnEyhvrQNks",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    276
  ]
}
*/
== DIAGNOSTICS ==

[]
