optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_preserve_filenames_segments.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	foo();
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

export const foo = () => console.log('foo');

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));
export const foo = ()=>console.log("foo");


None
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
export const App_component_ckEPmXZlub0 = (props)=>{
	foo();
	return _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", { on:click: /*#__PURE__*/ qrl(i_onClick, "App_component_Cmp_p_onClick") }, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    218
  ]
}
*/
== DIAGNOSTICS ==

[]
