optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_prod_node.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const Foo = component$(() => {
	return (
		<div>
			<div onClick$={() => console.log('first')}/>
			<div onClick$={() => console.log('second')}/>
			<div onClick$={() => console.log('third')}/>
		</div>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_gZqPatVoDqw = ()=>import("./test.tsx_s_gZqPatVoDqw");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_gZqPatVoDqw, "s_gZqPatVoDqw"));


None
============================= test.tsx_s_gZqPatVoDqw.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_2 = ()=>import("./test.tsx");
const i_1 = ()=>import("./test.tsx");
const i_onClick = ()=>import("./test.tsx");
export const s_gZqPatVoDqw = ()=>{
	return <div>
			<div on:click={/*#__PURE__*/ qrl(i_onClick, "Foo_component_div_div_onClick")} />
			<div on:click={/*#__PURE__*/ qrl(i_1, "Foo_component_div_div_onClick_1")} />
			<div on:click={/*#__PURE__*/ qrl(i_2, "Foo_component_div_div_onClick_2")} />
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_s_gZqPatVoDqw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    261
  ]
}
*/
== DIAGNOSTICS ==

[]
